# AI-Voice-chatbot

./: .env  .gitignore  README.md  app.py  audio_processing.py  chatbot.py  main.py  pyproject.toml
FunctionGemma/: [FunctionGemma]Finetune_FunctionGemma_270M_for_Mobile_Actions_with_Hugging_Face.ipynb
templates/: index.html
